--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 /******************************************************************
-Theme Name: Meat Map
-Theme URI: http://www.meat-map.com
-Description: The Meat Map Wordpress theme, for many win!
+Theme Name: White Map
+Description: A white-label map theme for quickly creating a map-based site.
 Author: Mark P. Lindhout
 Author URI: http://www.marklindhout.com
-Version: 0.1
+Version: 0.2
 ******************************************************************/
 
 /* BEGIN - Theme Check compatibility (http://wordpress.org/plugins/theme-check/) needs these classes in this particular CSS file. */
