Updated theme check required items, cleaned up JS loading, fixed some errors, updated slide-in-menu styling and made sure header looks nice when no logo is defined.

--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
-/******************************************************************
-Theme Name: White Map
-Description: A white-label map theme for quickly creating a map-based site.
-Author: Mark P. Lindhout
-Author URI: http://www.marklindhout.com
-Version: 0.2
-******************************************************************/
-
-/* BEGIN - Theme Check compatibility (http://wordpress.org/plugins/theme-check/) needs these classes in this particular CSS file. */
-.sticky {}
-.gallery-caption {}
-.bypostauthor {}
-/* END - Theme Check compatibility */
+/*
+	Theme Name: White Map
+	Description: A white-label map theme for quickly creating a map-based site.
+	Author: Mark P. Lindhout
+	Author URI: http://www.marklindhout.com
+	Version: 0.3
+	License: GPL v3
+	License URI: http://www.gnu.org/licenses/gpl-3.0.html
+*/
