--- a/style.css
+++ b/style.css
@@ -6,4 +6,5 @@
 	Version: 0.3
 	License: GPL v3
 	License URI: http://www.gnu.org/licenses/gpl-3.0.html
+	Tags: light, white, fluid-layout, responsive-layout, custom-colors, custom-menu, microformats, theme-options, translation-ready, left-sidebar
 */
